# dsba_nlp

./: README.md  pyproject.toml
seminars/: week01_word_embeddings.ipynb  week02_NN_text_classification.ipynb
