[project]
name = "nlp-dsba"
version = "0.1.0"
description = "NLP seminars notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.0",
    "gensim>=4.3.3",
    "ipykernel>=6.30.1",
    "jupyter-bokeh>=4.0.5",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "wordcloud>=1.9.4",
]
